fix(sensitive-word): 配置缓存改存 JSON 避免 L2 ClassCast
- PlatformSensitiveWordConfig 缓存字符串后 toBean，避开 LinkedHashMap
- MapperScan 补齐；试检命中来源识别 /client/；List 用 getFirst